<resources>
    <string name="app_name">Assignment_tracker</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_image">Welcome!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addFragmentSubmitButton">Submit</string>
    <string name="addFragmentEndDateHint">End Date</string>
    <string name="addFragmentStartDateHint">Start Date</string>
    <string name="addFragmentNameHint">Assignment Name</string>
    <string name="addFragmentTitle">Add Assignment</string>
    <string name="logout">Log Out</string>
</resources>